--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="main">
+    <div class="main" id="home">
         <nav class="navbar">
             <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/logo.svg" alt="logo" class="navbar__icon">
             <ul class="navbar__list">
@@ -15,15 +15,63 @@
                 <li class="navbar__item">Sign In</li>
             </ul>
         </nav>
-        <section class="section">
-            <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/illustration-1.svg" alt="files location" class="section__image">
-            <h2 class="section__title">All your files in one secure location, accessible anywhere.</h2>
-            <p class="section__text">Fylo stores your most important files in one secure location. Access them wherever you need, share and collaborate with friends, family, and co-workers.</p>
-            <form action="" class="form">
-                <input type="text" name="email" id="email" class="form__input" placeholder="Enter your email...">
-                <button type="submit" class="form__button">Get Started</button>
+        <section class="section1">
+            <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/illustration-1.svg" alt="files" class="section1__image">
+            <h1 class="section1__title">All your files in one secure location, accessible anywhere.</h1>
+            <p class="section1__text">Fylo stores your most important files in one secure location. Access them wherever you need, share and collaborate with friends, family, and co-workers.</p>
+            <form action="" class="form1">
+                <input type="text" name="email-form1" id="email-form1" class="form1__input" placeholder="Enter your email...">
+                <button type="submit" class="form1__button">Get Started</button>
             </form>
         </section>
+        <section class="section2">
+            <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/illustration-2.svg" alt="working" class="section2__image">
+            <h3 class="section2__title">Stay productive, wherever you are</h3>
+            <p class="section2__text">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
+            <p class="section2__text">Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required!</p>
+            <a href="#home" class="section2__link">See how Fylo works</a><img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-arrow.svg" alt="go" class="link__button">
+        </section>
+        <article class="comment">
+            <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-quotes.svg" alt="" class="comment__start">
+            <p class="comment__text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+            <div class="profile">
+                <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/avatar-testimonial.jpg" alt="" class="profile__image">
+                <p class="profile__name">Kyle Burton</p>
+                <p class="profile__position">Founder & CEO, Huddle</p>
+            </div>
+        </article>
+        <section class="section3">
+            <h3 class="section3__title">Get early access today</h3>
+            <p class="section3__text">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+            <form action="" class="form2">
+                <input type="text" name="email-form2" id="email-form2" class="form2__input" placeholder="email@example.com">
+                <button type="submit" class="form2__button">Get Started For Free</button>
+            </form>
+        </section>
+        <footer class="footer">
+            <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/logo.svg" alt="logo" class="footer__icon">
+            <div class="contact">
+                <div class="phone">
+                    <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-phone.svg" alt="" class="contact__phone">
+                    <p class="contact__number">Phone: +1-543-123-4567</p>
+                </div>
+                <div class="email">
+                    <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-email.svg" alt="" class="contact__email">
+                    <p class="contact__email">example@fylo.com</p>
+                </div>
+            </div>
+            <ul class="about">
+                <li class="about__item">About Us</li>
+                <li class="about__item">Jobs</li>
+                <li class="about__item">Press</li>
+                <li class="about__item">Blog</li>
+            </ul>
+            <ul class="terms">
+                <li class="terms__item">Contact Us</li>
+                <li class="terms__item">Terms</li>
+                <li class="terms__item">Privacy</li>
+            </ul>
+        </footer>
     </div>
 </body>
 </html>
