--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reseter.css">
     <link rel="stylesheet" href="./styles/index.css">
     <title>Fylo</title>  
@@ -38,17 +41,22 @@
             <h3 class="section2__title">Stay productive, wherever you are</h3>
             <p class="section2__text">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
             <p class="section2__text">Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required!</p>
-            <a href="#home" class="section2__link">See how Fylo works</a><img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-arrow.svg" alt="go" class="link__button">
+            <a href="#home" class="section2__link">
+                <p class="link__text">See how Fylo works</p>
+                <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-arrow.svg" alt="go" class="link__icon">
+            </a>
+            <article class="comment">
+                <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-quotes.svg" alt="" class="comment__start">
+                <p class="comment__text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+                <div class="profile">
+                    <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/avatar-testimonial.jpg" alt="" class="profile__image">
+                    <div class="profile__description">
+                        <p class="profile__name">Kyle Burton</p>
+                        <p class="profile__position">Founder & CEO, Huddle</p>
+                    </div>
+                </div>
+            </article>
         </section>
-        <article class="comment">
-            <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-quotes.svg" alt="" class="comment__start">
-            <p class="comment__text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
-            <div class="profile">
-                <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/avatar-testimonial.jpg" alt="" class="profile__image">
-                <p class="profile__name">Kyle Burton</p>
-                <p class="profile__position">Founder & CEO, Huddle</p>
-            </div>
-        </article>
         <section class="section3">
             <h3 class="section3__title">Get early access today</h3>
             <p class="section3__text">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
