add section3 styles

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <h1 class="section1__title">All your files in one secure location, accessible anywhere.</h1>
             <p class="section1__text">Fylo stores your most important files in one secure location. Access them wherever you need, share and collaborate with friends, family, and co-workers.</p>
             <form action="" class="form1">
-                <input type="text" name="email-form1" id="email-form1" class="form1__input" placeholder="Enter your email...">
-                <button type="submit" class="form1__button">Get Started</button>
+                <input type="text" name="email-form1" id="email-form1" class="form__input-big form__placeholder form__placeholder--big" placeholder="Enter your email...">
+                <button type="submit" class="form__button form__button--big">Get Started</button>
             </form>
         </section>
         <section class="section2">
@@ -61,8 +61,8 @@
             <h3 class="section3__title">Get early access today</h3>
             <p class="section3__text">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
             <form action="" class="form2">
-                <input type="text" name="email-form2" id="email-form2" class="form2__input" placeholder="email@example.com">
-                <button type="submit" class="form2__button">Get Started For Free</button>
+                <input type="text" name="email-form2" id="email-form2" class="form__input-small form__placeholder form__placeholder--small" placeholder="email@example.com">
+                <button type="submit" class="form__button form__button--small">Get Started For Free</button>
             </form>
         </section>
         <footer class="footer">
