complete mobile design

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
             </form>
         </section>
         <footer class="footer">
-            <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/logo.svg" alt="logo" class="footer__icon">
+            <div class="footer__icon"></div>
             <div class="contact">
                 <div class="phone">
                     <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-phone.svg" alt="" class="contact__phone">
                     <p class="contact__number">Phone: +1-543-123-4567</p>
                 </div>
                 <div class="email">
-                    <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-email.svg" alt="" class="contact__email">
+                    <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-email.svg" alt="" class="contact__email-image">
                     <p class="contact__email">example@fylo.com</p>
                 </div>
             </div>
@@ -89,9 +89,9 @@
                 <li class="terms__item">Privacy</li>
             </ul>
             <section class="social">
-                <img src="https://img.icons8.com/?size=100&id=59780&format=png&color=000000" alt="facebook icon" class="social__facebook">
-                <img src="https://img.icons8.com/?size=100&id=8824&format=png&color=000000" alt="twitter icon" class="social__twitter">
-                <img src="https://img.icons8.com/?size=100&id=32309&format=png&color=000000" alt="instagram icon" class="social__instagram">
+                <div class="social__facebook social__facebook--styles"></div>
+                <div class="social__twitter social__twitter--styles"></div>
+                <div class="social__instagram social__instagram--styles"></div>
             </section>
         </footer>
     </div>
