navbar desktop complete

--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
         </nav>
         <section class="section1">
             <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/illustration-1.svg" alt="files" class="section1__image">
-            <h1 class="section1__title">All your files in one secure location, accessible anywhere.</h1>
-            <p class="section1__text">Fylo stores your most important files in one secure location. Access them wherever you need, share and collaborate with friends, family, and co-workers.</p>
-            <form action="" class="form1">
-                <input type="text" name="email-form1" id="email-form1" class="form__input-big form__placeholder form__placeholder--big" placeholder="Enter your email...">
-                <button type="submit" class="form__button form__button--big">Get Started</button>
-            </form>
+            <div class="section1__info">
+                <h1 class="section1__title">All your files in one secure location, accessible anywhere.</h1>
+                <p class="section1__text">Fylo stores your most important files in one secure location. Access them wherever you need, share and collaborate with friends, family, and co-workers.</p>
+                <form action="" class="form1">
+                    <input type="text" name="email-form1" id="email-form1" class="form__input-big form__placeholder form__placeholder--big" placeholder="Enter your email...">
+                    <button type="submit" class="form__button form__button--big">Get Started</button>
+                </form>
+            </div>
         </section>
         <section class="section2">
             <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/illustration-2.svg" alt="working" class="section2__image">
