section2 desktop complete

--- a/index.html
+++ b/index.html
@@ -38,26 +38,29 @@
                 </form>
             </div>
         </section>
+        <div class="section2__start"></div>
         <section class="section2">
             <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/illustration-2.svg" alt="working" class="section2__image">
-            <h3 class="section2__title">Stay productive, wherever you are</h3>
-            <p class="section2__text">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
-            <p class="section2__text">Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required!</p>
-            <a href="#home" class="section2__link">
-                <p class="link__text">See how Fylo works</p>
-                <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-arrow.svg" alt="go" class="link__icon">
-            </a>
-            <article class="comment">
-                <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-quotes.svg" alt="" class="comment__start">
-                <p class="comment__text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
-                <div class="profile">
-                    <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/avatar-testimonial.jpg" alt="" class="profile__image">
-                    <div class="profile__description">
-                        <p class="profile__name">Kyle Burton</p>
-                        <p class="profile__position">Founder & CEO, Huddle</p>
+            <div class="section2__info">
+                <h3 class="section2__title">Stay productive, wherever you are</h3>
+                <p class="section2__text">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
+                <p class="section2__text">Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required!</p>
+                <a href="#home" class="section2__link">
+                    <p class="link__text">See how Fylo works</p>
+                    <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-arrow.svg" alt="go" class="link__icon">
+                </a>
+                <article class="comment">
+                    <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-quotes.svg" alt="" class="comment__start">
+                    <p class="comment__text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+                    <div class="profile">
+                        <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/avatar-testimonial.jpg" alt="" class="profile__image">
+                        <div class="profile__description">
+                            <p class="profile__name">Kyle Burton</p>
+                            <p class="profile__position">Founder & CEO, Huddle</p>
+                        </div>
                     </div>
-                </div>
-            </article>
+                </article>
+            </div>
         </section>
         <section class="section3">
             <h3 class="section3__title">Get early access today</h3>
