--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
             </div>
         </section>
         <section class="section3">
-            <h3 class="section3__title">Get early access today</h3>
-            <p class="section3__text">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+            <div class="section3__info">
+                <h3 class="section3__title">Get early access today</h3>
+                <p class="section3__text">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+            </div>
             <form action="" class="form2">
                 <input type="text" name="email-form2" id="email-form2" class="form__input-small form__placeholder form__placeholder--small" placeholder="email@example.com">
                 <button type="submit" class="form__button form__button--small">Get Started For Free</button>
