--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             </form>
         </section>
         <footer class="footer">
-            <div class="footer__icon"></div>
             <div class="contact">
+                <div class="footer__icon"></div>
                 <div class="phone">
-                    <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-phone.svg" alt="" class="contact__phone">
+                    <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-phone.svg" alt="" class="contact__phone-image">
                     <p class="contact__number">Phone: +1-543-123-4567</p>
                 </div>
                 <div class="email">
