--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                 <h3 class="section2__title">Stay productive, wherever you are</h3>
                 <p class="section2__text">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
                 <p class="section2__text">Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required!</p>
-                <a href="#home" class="section2__link">
-                    <p class="link__text">See how Fylo works</p>
+                <button href="#home" class="section2__link">
+                    See how Fylo works
                     <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-arrow.svg" alt="go" class="link__icon">
-                </a>
+                </button>
                 <article class="comment">
                     <img src="./assets/Fylo-landing-page-info/fylo-landing-page-with-two-column-layout-master/images/icon-quotes.svg" alt="" class="comment__start">
                     <p class="comment__text">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
